--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ngx-flickity": "0.0.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
